[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]

clap = { version = "4.6.1", features = ["derive"] }
commun_utils_handler = {path = "../../wasip2/communUtilsHandler/"}
derive_utils = {path = "../../wasip2/communUtilsHandler/derive_utils/"}

tokio = {version = "1.49", features = ["full"]}
tokio-tungstenite = "0.23.1"